examples/fail/fail_exception_serialize/brioche.bri
import * as brioche from "std";

interface TestType {
  foo: string;
  bar: string;
}

export default () => {
  return {
    briocheSerialize: () => {
      throw new Error("briocheSerialize exception");
    }
  }
}
